content/_generated-doc/2.7/config/quarkus-reactive-messaging-reactive-messaging-configuration.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-reactive-messaging-reactive-messaging-configuration_configuration]]link:#quarkus-reactive-messaging-reactive-messaging-configuration_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-reactive-messaging-reactive-messaging-configuration_quarkus.reactive-messaging.metrics.enabled]]`link:#quarkus-reactive-messaging-reactive-messaging-configuration_quarkus.reactive-messaging.metrics.enabled[quarkus.reactive-messaging.metrics.enabled]`

[.description]
--
Whether or not Reactive Messaging metrics are published in case a metrics extension is present (default to false).
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-reactive-messaging-reactive-messaging-configuration_quarkus.reactive-messaging.strict]]`link:#quarkus-reactive-messaging-reactive-messaging-configuration_quarkus.reactive-messaging.strict[quarkus.reactive-messaging.strict]`

[.description]
--
Enables or disables the strict validation mode.
--|boolean 
|`false`

|===