content/_generated-doc/3.2/config/quarkus-reactive-messaging-reactive-messaging-configuration.adoc

:summaryTableId: quarkus-reactive-messaging-reactive-messaging-configuration
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-reactive-messaging-reactive-messaging-configuration_configuration]]link:#quarkus-reactive-messaging-reactive-messaging-configuration_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-reactive-messaging-reactive-messaging-configuration_quarkus-reactive-messaging-metrics-enabled]]`link:#quarkus-reactive-messaging-reactive-messaging-configuration_quarkus-reactive-messaging-metrics-enabled[quarkus.reactive-messaging.metrics.enabled]`


[.description]
--
Whether Reactive Messaging metrics are published in case a metrics extension is present (default to false).

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REACTIVE_MESSAGING_METRICS_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REACTIVE_MESSAGING_METRICS_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-reactive-messaging-reactive-messaging-configuration_quarkus-reactive-messaging-strict]]`link:#quarkus-reactive-messaging-reactive-messaging-configuration_quarkus-reactive-messaging-strict[quarkus.reactive-messaging.strict]`


[.description]
--
Enables or disables the strict validation mode.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_REACTIVE_MESSAGING_STRICT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_REACTIVE_MESSAGING_STRICT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`

|===